# arctica-greeter

./: .build.yml  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  NEWS.Canonical  README  README.md  arctica-greeter-check-hidpi  arctica-greeter-guest-account-script.in  arctica-greeter-guest-session-auto.sh  arctica-greeter-magnifier  arctica-greeter-set-keyboard-layout  arctica-greeter.doap  arctica-guest-account-script.in  arctica-guest-session-auto.sh  autogen.sh  configure.ac  lightdm-arctica-greeter-session  update-po.sh  update-pot.sh
.patches-to-be-ported-from-slick-greeter/: 0025-Add-option-to-span-background-across-multiple-monito.patch  0027-Rename-simplify-background-mode.patch  0062-Allow-wayland-sessions-to-pass-validation.patch
.tx/: config
bugReports/: BugReport_11-01-2017.odt
data/: 50-arctica-greeter-guest-wrapper.conf.in  50-arctica-greeter.conf.in  50-org.Arctica-Project.arctica-greeter.rules  90-arctica-greeter.conf  91-arctica-greeter-guest-session.conf  92-arctica-greeter-remote-logon.conf  Makefile.am  arctica-greeter-blue.xcf  arctica-greeter-check-hidpi.1  arctica-greeter-enable-tap-to-click.1  arctica-greeter-guest-account-script.1  arctica-greeter-guest-account-script.8  arctica-greeter-guest-session-startup.desktop.in  arctica-greeter-magnifier.1  arctica-greeter-set-keyboard-layout.1  arctica-greeter.1  arctica-greeter.desktop  arctica-greeter.desktop.in  arctica-greeter.desktop.in.in  arctica-greeter.pkla  arctica-guest-session-startup.desktop.in  com.canonical.unity-greeter.gschema.xml  gnustep_badge.xcf  i3_badge.xcf  lxde_badge.xcf  mate_badge.xcf  openbox_badge.xcf  org.ArcticaProject.ArcticaGreeterSession.gschema.xml  org.ArcticaProject.arctica-greeter.gschema.xml  surf_badge.xcf  twm_badge.xcf  xfce_badge.xcf  xsession_badge.xcf
data/backgrounds/: README.md
data/badges/: COPYING.badges  awesome_badge.xcf  budgie_badge.xcf  matchbox_badge.xcf  mate_badge.xcf  sleclassic_badge.xcf  sugar_badge.xcf  weston_badge.xcf  xfce_badge.xcf  xmonad_badge.xcf  xsession_badge.xcf
data/sounds/: COPYING.system-ready  index.theme
debian/: 30_arctica-greeter-theme-debian-buster.gschema.override  30_arctica-greeter-theme-debian-futureprototype.gschema.override  30_arctica-greeter-theme-debian-softwaves.gschema.override  30_arctica-greeter-theme-debian-stretch.gschema.override  30_arctica-greeter-theme-debian.gschema.override  30_arctica-greeter-theme-ubuntumate.gschema.override  50-arctica-greeter.conf  50-unity-greeter.conf  90-arctica-greeter.conf  90-unity-greeter-x2go.conf  91-arctica-greeter-guest-session.conf  92-arctica-greeter-remote-logon.conf  arctica-greeter-guest-session.install  arctica-greeter-remote-logon.install  arctica-greeter-theme-debian-buster.install  arctica-greeter-theme-debian-futureprototype.install  arctica-greeter-theme-debian-softwaves.install  arctica-greeter-theme-debian-stretch.install  arctica-greeter-theme-debian.gschema.override  arctica-greeter-theme-debian.install  arctica-greeter-theme-debian.postinst  arctica-greeter-theme-debian.postrm  arctica-greeter-theme-ubuntumate.gschema.override  arctica-greeter-theme-ubuntumate.install  arctica-greeter.install  changelog  control  copyright  copyright.in  docs  install  maintscript  rules  watch
debian/patches/: 01_x2go+rls.patch  series
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  arctica-greeter.pot  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  cv.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fo.po  (+82 more)
src/: Makefile.am  animate-timer.vala  arctica-greeter.vala  background.vala  cairo-utils.vala  config.vapi  dash-box.vala  dash-button.vala  dash-entry.vala  fixes.vapi  flat-button.vala  greeter-list.vala  idle-monitor.vala  indicator.vapi  list-stack.vala  logo-generator.vala  main-window.vala  menubar.vala  pam_freerdp2.vapi  pam_x2go.vapi  prompt-box.vala  remote-logon-service.vala  session-list.vala  settings-daemon.vala  settings.vala  shutdown-dialog.vala  toggle-box.vala  unity-greeter.vala  user-list.vala  user-prompt-box.vala  util.vala
tests/: Makefile.am  arctica-greeter.vala  menubar.vala  test.vala
